pkgincludedir=$(includedir)/aprilui
pkginclude_HEADERS= \
AnimatorAlphaChanger.h    CallbackEvent.h         ObjectContainer.h \
AnimatorBlueChanger.h     ColoredImage.h          ObjectEditBox.h \
AnimatorFrameAnimation.h  ColorImage.h            Object.h \
AnimatorGreenChanger.h    CompositeImage.h        ObjectImageBox.h \
Animator.h                Dataset.h               ObjectImageButton.h \
AnimatorMoverX.h          EventArgs.h             ObjectLabelBase.h \
AnimatorMoverY.h          Event.h                 ObjectLabel.h \
AnimatorRedChanger.h      Exception.h             Objects.h \
AnimatorRotator.h         Image.h                 ObjectSlider.h \
AnimatorScalerX.h         Images.h                ObjectTextButton.h \
AnimatorScalerY.h         NullImage.h             ObjectTextImageButton.h \
Animators.h               ObjectButtonBase.h      ObjectToggleButton.h \
apriluiExport.h           ObjectCallbackObject.h  TiledImage.h \
aprilui.h                 ObjectColoredQuad.h     xmlHelper.h

