pkgincludedir=$(includedir)/aprilui
pkginclude_HEADERS= \
AnimatorAlphaChanger.h    CallbackEvent.h         ObjectContainer.h \
AnimatorBlueChanger.h     ColoredImage.h          ObjectEditBox.h \
AnimatorFrameAnimation.h  ColorImage.h            Object.h \
AnimatorGreenChanger.h    CompositeImage.h        ObjectImageBox.h \
Animator.h                Dataset.h               ObjectImageButton.h \
AnimatorMoverX.h          EventArgs.h             ObjectLabelBase.h \
AnimatorMoverY.h          Event.h                 ObjectLabel.h \
AnimatorRedChanger.h      EventUtils.h            Objects.h \
AnimatorResizerX.h        Exception.h             ObjectSlider.h \
AnimatorResizerY.h        Image.h                 ObjectTextButton.h \
AnimatorRotator.h         Images.h                ObjectTextImageButton.h \
AnimatorScalerX.h         MemberCallbackEvent.h   ObjectToggleButton.h \
AnimatorScalerY.h         NullImage.h             TiledImage.h \
Animators.h               ObjectButtonBase.h      xmlHelper.h \
apriluiExport.h           ObjectCallbackObject.h \
aprilui.h                 ObjectColoredQuad.h

