AM_CFLAGS=-I../../include/aprilui -I..
AM_CXXFLAGS=-I../../include/aprilui -I..
noinst_LTLIBRARIES = libaprilui_src_animators.la
libaprilui_src_animators_la_SOURCES =  \
AnimatorAlphaChanger.cpp    AnimatorGreenChanger.cpp  AnimatorRotator.cpp \
AnimatorBlueChanger.cpp     AnimatorMoverX.cpp        AnimatorScalerX.cpp \
Animator.cpp                AnimatorMoverY.cpp        AnimatorScalerY.cpp \
AnimatorFrameAnimation.cpp  AnimatorRedChanger.cpp



