AM_CFLAGS=-I../../include/aprilui -I..
AM_CXXFLAGS=-I../../include/aprilui -I..
noinst_LTLIBRARIES = libaprilui_src_animators.la
libaprilui_src_animators_la_SOURCES =  \
AnimatorAlphaChanger.cpp    AnimatorMoverX.cpp      AnimatorRotator.cpp \
AnimatorBlueChanger.cpp     AnimatorMoverY.cpp      AnimatorScalerX.cpp \
Animator.cpp                AnimatorRedChanger.cpp  AnimatorScalerY.cpp \
AnimatorFrameAnimation.cpp  AnimatorResizerX.cpp \
AnimatorGreenChanger.cpp    AnimatorResizerY.cpp



