AM_CFLAGS=-I../../include/aprilui -I..
AM_CXXFLAGS=-I../../include/aprilui -I..
noinst_LTLIBRARIES = libaprilui_src_objects.la
libaprilui_src_objects_la_SOURCES =  \
ObjectButtonBase.cpp	  ObjectEditBox.cpp	 ObjectSlider.cpp \
ObjectCallbackObject.cpp  ObjectImageBox.cpp	 ObjectTextButton.cpp \
ObjectColoredQuad.cpp	  ObjectImageButton.cpp  ObjectTextImageButton.cpp \
ObjectContainer.cpp	  ObjectLabelBase.cpp	 ObjectToggleButton.cpp \
Object.cpp		  ObjectLabel.cpp

